--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "lessc styles/styles.less --autoprefix=\"last 2 versions\" > styles/styles.css",
-    "start": "node server.js",
-    "build-and-start": "npm run build:css && npm run start"
+    "start": "npm run build:css && node server.js"
   },
   "repository": {
     "type": "git",
